package prototype.model;

public interface Prototype {
    Prototype clone();
}
